Sync main with develop (#20)
* chore: improve test logging and structure using JUnit 5 extensions (#17)

* chore: modifications (#18)

* Chore/add junie to gitignore (#19)

* chore: modifications

* chore: remove .junie directory